tests/NormalTests/paczka2/big_fuzzy/50770453.err
Error in line 1: yLrkdNZ A794 71,7
Error in line 4: xB6Fi S139 83,7
Error in line 3: yLrkdNZ A442 42,5
Error in line 9: xB6Fi A794 3,6
Error in line 7: FtQnC4t5y A794 344,2
Error in line 17: FtQnC4t5y A442 14,0
Error in line 10: yLrkdNZ S118 63,9
Error in line 30: JV1AKdJH S139 87,3
Error in line 20: xR2 A794 92,7
Error in line 43: S118 S118 14,0
Error in line 32: yLrkdNZ S139 378,6
Error in line 44: S118 A442 81,4
Error in line 76: yLrkdNZ A7J4 35J,8
Error in line 64: JV1AKdJH S139 73,5
Error in line 86: xR2 S139 10,4
Error in line 89: FtQnC4t5y A794 10,2
Error in line 125: xB6Fi A442 121,5
Error in line 121: xR2 S118 69,8
Error in line 127: xR2 S139 27,6
Error in line 136: FtQnC4t5y A442 64,0
Error in line 139: FtQnC4t5y S118 12,2
Error in line 140: xR2 A442 75,9
Error in line 144: 1KFGeN5AoV A794 60,4
Error in line 151: JV1AKdJH S139 88,3
Error in line 167: 1KFGeN5AoV A794 91,3
Error in line 160: xB6Fi A442 96,0
Error in line 166: xR2 S139 76,9
Error in line 180: yLrkdNZ S139 415,0
Error in line 170: xB6Fi S118 84,6
Error in line 182: xB6Fi A442 28,7
Error in line 181: yLrkdNZ S118 14,4
Error in line 196: xR2 S118 43,6
Error in line 202: xR2 A794 15,8
Error in line 204: xB6Fi S139 73,3
Error in line 188: FtQnC4t5y A794 67,1
Error in line 240: S118 S118 69,4
Error in line 238: JV1AKdJH S139 86,3
